# yessir

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
npm/: package.json
npm/lib/: binary.js  hooks.js  platform.js  shell.js
src/: main.rs  server.rs  state.rs  tui.rs
