[package]
name = "yessir"
version = "0.1.5"
edition = "2024"

[[bin]]
name = "yessir"
path = "src/main.rs"

[[bin]]
name = "yessir-hook"
path = "src/bin/hook.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
unicode-width = "0.2"
